--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <version>3.0.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5</version>
+    </dependency>
   </dependencies>
 
   <build>
