--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.tanza.kudu</groupId>
-  <artifactId>kudu</artifactId>
+  <groupId>com.tanza.dashi</groupId>
+  <artifactId>dashi</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>kudu</name>
+  <name>dashi</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
