--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.tanza.dashi</groupId>
+  <groupId>cc.tanza</groupId>
   <artifactId>dashi</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>dashi</name>
-  <url>https://github.com/jtanza/dashi/tree/master</url>
+  <url>https://github.com/jtanza/dashi</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
