--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,15 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>dashi</name>
-  <url>https://github.com/jtanza/dashi</url>
+  <description>An embedded HTTP server</description>
+  <url>https://github.com/jtanza/dashi/wiki</url>
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://github.com/jtanza/dashi/blob/master/LICENSE</url>
+    </license>
+  </licenses>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,6 +33,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.10</version>
@@ -34,12 +48,6 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.9</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>3.0.0</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
